# densevlad

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
247code/: README.txt  at_setup.m  test_densevlad.m  test_matching.m  test_viewsynth.m
247code/code/: at_NN_match.m  at_SIFT_matching.m  at_dirgen.m  at_grid_maskfeatures_dense.m  at_gsv2viewsynth.m  at_image2densevlad.m  at_image2densevlad_fast.m  at_l2normalize_col.m  at_plane2pmask.m  at_ransacH4.m  at_readgsvfiles.m  at_rodrigue.m  at_sph2rct.m  at_synthreproj2.c  at_visualize_matches.m  mh_iminterp.c  relja_computeVLAD.m  relja_computeVLAD_fast.m
scripts/: bench_matlab.m  bench_optimizations.m  build_vlfeat_arm64.sh  check_parity_multi.m  download_247code.sh  download_assets.py  dump_densevlad_all.m  dump_densevlad_all_blackbox.m  dump_densevlad_all_intermediate.m  dump_densevlad_intermediate.m  ensure_247code.py  ensure_assets.py  eval_tokyo247_densevlad.m  eval_tokyo247_densevlad.py  fix_cyvlfeat_rpath.py  generate_cx_norm.py  pin_torii15_expected.py  regenerate_example_vlads.m  switch_vlfeat_matlab.sh
scripts/arm64/: build_vlfeat_arm64.sh  install_cyvlfeat.sh
scripts/arm64/patches/: vlfeat_dsift_neon.patch
scripts/bench/: bench_247code_original.m  bench_phow_breakdown.m  bench_phow_breakdown.py  bench_tokyo247_golden.py  test_descriptor_reduction.py
scripts/linux/: build_vlfeat_linux.sh  install_cyvlfeat.sh  verify_vlfeat_linux.sh
scripts/matlab/: dump_densevlad.m  dump_densevlad_all.m  dump_densevlad_grid.m  dump_tokyo247_golden.m  eval_tokyo247_densevlad.m  im2single.m
scripts/reference/cyvlfeat/: patch_cyvlfeat_sdist.py
scripts/setup/: arm64_build_vlfeat.sh  linux_build_vlfeat.sh
src/densevlad/torii15/: __init__.py  assets.py  densevlad.py  matio.py  tokyo247.py  whitening.py
src/densevlad/torii15/data/: dnscnt_RDSIFT_K128.cx_norm.npy
src/dvlad/: __init__.py
src/dvlad/torii15/: __init__.py  assets.py  densevlad.py  image.py  matio.py
tests/: _cosine.py  conftest.py  test_torii15_pre_pca_vlad.py  test_torii15_shipped_parity.py  test_torii15_stage_parity.py  test_torii15_tokyo247_golden.py  test_torii15_whitening.py
