[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "densevlad"
version = "0.0.1"
description = "DenseVLAD replication (Torii et al. 2015 baseline)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michael" }]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: network/large-asset tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/densevlad"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"
numpy = ">=1.24,<2"
scipy = ">=1.10"
h5py = ">=3.10"
pillow = ">=10.0"
platformdirs = ">=4.0"
pytest = ">=7.4"
numba = ">=0.58"
cython = ">=3.0"

[tool.pixi.pypi-dependencies]
# Keep empty so Pixi does not try to resolve project dependencies from PyPI.

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.4"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
build-vlfeat-linux = "bash scripts/linux/build_vlfeat_linux.sh"
install-cyvlfeat-linux = "bash scripts/linux/install_cyvlfeat.sh"
install-densevlad-linux = "python -m pip install -e . --no-deps"
test = "PYTHONPATH=src python -m pytest -q"
test-prepca-linux = "PYTHONPATH=src python -m pytest tests/test_torii15_pre_pca_vlad.py -q"
build-vlfeat-arm64 = "bash scripts/arm64/build_vlfeat_arm64.sh"
install-cyvlfeat-arm64 = "bash -lc 'source .pixi/vlfeat_env.sh && bash scripts/arm64/install_cyvlfeat.sh'"
install-densevlad-arm64 = "bash -lc 'source .pixi/vlfeat_env.sh && python -m pip install -e . --no-deps'"
test-prepca-arm64 = "bash -lc 'source .pixi/vlfeat_env.sh && PYTHONPATH=src python -m pytest tests/test_torii15_pre_pca_vlad.py -q'"
